--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+  overflow: hidden;
+  background: darkred;
+  color: antiquewhite;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  width: 80%;
+  margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.logo{
+  font-size: 25px;
+  width: 30%;
+  float: left;
+  display: block;
+  margin: 10px 0;
+  color: antiquewhite;
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  width: 70%;
+  float: left;
+  padding: 0;
+  text-align: right;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul a {
+  text-decoration: none;
+  color: antiquewhite;
+  margin: 0 15px;
+}
+
+.active {
+  background: rgb(43, 40, 40);
 }
